# routes/feedbacks.js
@@ -1,10 +1,11 @@
-const express = require('express');
+const express = require("express");
 const router = express.Router();
-const controller = require('../controllers/FeedbackController');
+const controller = require("../controllers/FeedbackController");
+const { authenticateToken } = require("../middleware/auth");
 
-router.post('/', controller.create); // user gửi feedback
-router.get('/', controller.getAll); // admin xem tất cả feedback
-router.put('/:id', controller.update); // admin xử lý feedback
-router.delete('/:id', controller.delete); // admin xóa feedback
+router.post("/", authenticateToken, controller.create); // user gửi feedback
+router.get("/", controller.getAll); // admin xem tất cả feedback
+router.put("/:id", controller.update); // admin xử lý feedback
+router.delete("/:id", controller.delete); // admin xóa feedback
 
-module.exports = router; 
+module.exports = router;
